--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                     of protocol led to an uncontrolled power surge. This surge caused a massive explosion that ruptured the reactor 
                     core and released a significant amount of radioactive material into the atmosphere.
                 </p>
-                <button id="powerplant-button">Chernobyl Nuclear Powerplant</button>
+                <button id="powerplant-button">Click Here</button>
             </div>
         </section>
 
@@ -58,7 +58,7 @@
                     <br><br>A sudden power surge occurred, and the reactor’s flawed design caused the fuel rods to overheat and rupture. This triggered a steam explosion, which blew the reactor’s heavy steel and concrete lid off. A second explosion followed, igniting fires and releasing large amounts of radioactive material into the atmosphere.
                     <br><br>The disaster highlighted the dangers of ignoring safety protocols and the risks of operating reactors with inherent design vulnerabilities.
                 </p>
-                <button id="reactor4-button">Reactor 4</button>
+                <button id="reactor4-button">Click Here</button>
             </div>   
         </section>
 
@@ -73,7 +73,7 @@
                     <br><br>These abandoned spaces tell the stories of families who were uprooted, leaving everything behind in the face of an invisible threat. 
                     <br><br>The juxtaposition of the cheerful Ferris wheel against the backdrop of desolation encapsulates the stark contrast between life before and after the disaster.
                 </p>
-                <button id="ferris-wheel-button">Ferris Wheel</button>
+                <button id="ferris-wheel-button">Click Here</button>
             </div>   
         </section>
 
@@ -89,7 +89,7 @@
                     <br><br>
                     The Chernobyl disaster prompted a reevaluation of nuclear safety protocols worldwide and highlighted the need for transparency and accountability in the nuclear industry.
                 </p>
-                <button id="aftermath-button">Aftermath</button>
+                <button id="aftermath-button">Click Here</button>
 
             </div>   
         </section>
@@ -106,7 +106,6 @@
     <div class="powerplant-page" style="display: none;">
         <div class="header-container">
             <button id="powerplant-to-explore-button">Back</button>
-            <h1>Chernobyl Nuclear Powerplant</h1>
         </div>
     </div>
 
@@ -114,7 +113,6 @@
     <div class="reactor4-page" style="display: none;">
         <div class="header-container">
             <button id="reactor-to-explore-button">Back</button>
-            <h1>Reactor 4 Explosion</h1>
         </div>
     </div>
 
@@ -122,7 +120,6 @@
     <div class="ferris-wheel-page" style="display: none;">
         <div class="header-container">
             <button id="ferriswheel-to-explore-button">Back</button>
-            <h1>Wheels of Memories</h1>
         </div>
     </div>
 
@@ -130,7 +127,6 @@
     <div class="aftermath-page" style="display: none;">
         <div class="header-container">
             <button id="aftermath-to-explore-button">Back</button>
-            <h1>Aftermath</h1>
         </div>
     </div>
 
